# fast-math

./: .gitignore  .travis.yml  Cargo.toml  README.md  index.html  search-index.js
benches/: bench.rs
ci/: script.sh
examples/: exhaustive-atan.rs  exhaustive-exp.rs  exhaustive-exp_m1.rs  exhaustive-log.rs  exhaustive-log2_1p.rs
fast_math/: fn.log2.html  fn.log2_raw.html  index.html  stability.html  stability.json
fast_math/log/: fn.log2.html  fn.log2_raw.html  sidebar-items.js
optimiser/: Cargo.toml
optimiser/src/: main.rs  problems.rs
src/: atan.rs  exp.rs  float.rs  lib.rs  log.rs  tanh.rs
src/fast_math/: lib.rs.html  log.rs.html
