[package]
name = "fast-math"
version = "0.1.1"
authors = ["Huon Wilson <dbau.pp@gmail.com>"]

homepage = "https://github.com/huonw/fast-math"
repository = "https://github.com/huonw/fast-math"
documentation = "https://docs.rs/fast-math"
license = "MIT/Apache-2.0"
keywords = ["approximation", "relative-error", "mathematics","performance"]

readme = "README.md"
description = """
Fast, approximate versions of mathematical functions.
"""

[dependencies]
ieee754 = "0.2.6"

[dev-dependencies]
quickcheck = "0.7"
criterion = "0.2"

[features]
unstable = []

[[bench]]
name = "bench"
harness = false
